--- a/src/style.css
+++ b/src/style.css
@@ -2,91 +2,84 @@ html {
   height: 100%;
   width: 100%;
 }
-body{
-  /*font-family: ;*/
+
+body {
+  font-family: sans-serif;
   padding: 0;
   margin: 0;
-  background-image: url("imagens/fundo.jfif");
+  background-image: url("tarotimag/estrela.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  height: 100vh;
+  background-attachment: fixed;
 }
-.searc{
-  width:100%;
+/*filtro lateral e barra de pesguisa*/
+.searc {
+  width: 100%;
   background-color: black;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
-input{
-  width: 97%;
-  height: 50px;
+
+input {
+  width: 14%;
+  height: 40px;
   padding-left: 20px;
-  font-size: 20px;
-  border-radius: 6px;
+  font-size: 15px;
+  border-radius: 20px;
   border: 1px solid #d1cccc;
   margin: 15px;
-}
-img{
-  width: 5%;
-}
-#listCards {
-  width: 98%;
-  display: block;
-  list-style-type: none;
-  margin: 0;
-  padding: 18px;
-  position: absolute;
-  top: 55px;
-  
-}
-.listCards {
-  display: none;
-  align-items: center;
-  border: 1px solid #ddd;
-  background:#e6e3e3;
-  font-size: 18px;
-  color: black;
-  padding: 20px; 
-}
-li:hover{
-  background: #a3a0a0;
-}
-span{
-  margin-left: 25px;
+  position: fixed;
 }
 
-p {
-  text-align: justify;
-  margin: 35px;
-}
-h1 {
-  margin: 30px;
+
+
+.menu {
+  width: 70px;
+  border-radius: 50px;
+  position:fixed ;
+  z-index: 1;
+  display: flex;
+  padding: 15px;
+  margin-top: 80px;
+
+
+
 }
 
-.menu{
-  width: 40px;
-}
-
-.chec{
+.chec {
   display: none;
 }
 
 .filtro01 {
   background-color: rgba(119, 111, 111, 0.5);
-  width: 300px;
+  width: 250px;
   height: 100%;
-  left: -300px;
-  position: absolute;
+  left: -250px;
+  position: fixed;
   transition: all .5s;
+  margin-top: 70px;
 }
 
 .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
-  transform: translateX(300px);
+  transform: translateX(250px);
 }
-.arcanos {
+
+
+
+.lista .bigger,
+.lista .minors,
+.lista .home-page,
+.lista .copas,
+.lista .ouros,
+.lista .paus,
+.lista .espadas,
+.lista .cardall,
+.lista .orda,
+.lista .ordz {
   display: block;
   padding: 10px 0;
   margin: 0;
@@ -96,16 +89,21 @@ h1 {
   text-align: left;
 }
 
-.arcanos:hover{
+.lista .bigger:hover,
+.lista .minors:hover,
+.lista .home-page:hover,
+.lista .copas:hover,
+.lista .ouros:hover,
+.lista .paus:hover,
+.lista .espadas:hover,
+.lista .cardall:hover,
+.lista .orda:hover,
+.lista .ordz:hover {
   background-color: bisque;
   color: black;
 }
 
-.imgmenu {
-  padding: 15px;
-  position: absolute;
-  z-index: 1;
-}
+
 
 .lista {
   margin-top: 70px;
@@ -113,36 +111,193 @@ h1 {
   width: 100%;
 }
 
-.content {
-  float: right;
-  width: calc(100% - 350px);
-  padding: 20px;
+.inputBox {
+  margin-bottom: 20px;
 }
 
-.content .imgbruxa {
-  margin-right: 20px;
-  float: right;
-  width: 150px; 
-  border-radius: 20px;
+.inputBox select {
+  width: 80%;
+  padding: 10px;
+  border-radius: 50px;
 }
 
-.content .imgbruxa1 {
-  float: left;
-  width: 150px;
-  border-radius: 20px;
-  margin-right: 20px;
-}
 
-.content h1 {
-  margin-top: 0;
-  margin-left: 190px;
-  font-size: 50px; 
-  color: bisque;
+
+
+/*introdução*/ 
+  .content {
+    float:right;
+    width: calc(100% - 350px);
+    padding: 20px;
+  }
+  
+ 
+ 
+  
+  .content h1 {
+    margin-top: 0;
+    font-size: 50px; 
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
+  }
+  
+  .content p {
+    font-size: 20px; 
+    color: white;
+    text-shadow: 2px 2px 4px rgba(243, 219, 2, 0.5); /* Adiciona uma sombra */
+  }
+
+  .imgcartas{
+    position: relative;
+    float: right;
+    margin-right: 20px; /* Define a margem esquerda para criar espaço entre a imagem e o conteúdo */
+    filter: grayscale(60%) sepia(40%) brightness(80%) contrast(120%);
+  }
+ 
+
+    
+   
+    /*cards*/
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 50px;
+      margin-left: 250px;
+    }
+    
+    .card {
+      width: calc(50% - 40px);
+      cursor: pointer;
+      border-radius: 25px;
+      padding: 5px;
+      height:328px;
+      justify-content: center;
+      border: 1px solid gray;
+      padding: 10px;
+      margin: 20px;
+      background-color: black;
+      
+    }
+    
+   
+    
+    
+    
+    .card-item {
+      flex-basis: 15%; /* Ajustar a largura dos cards na versão mobile */
+    }
+    
+  
+    
+    .card-image {
+      width: 100%; /* Define a largura da imagem como 100% */
+      height: 100%; /* Define a altura da imagem como 100% */
+      border-radius: 25px;
+      justify-content: center;
+
+    }
+    .clickable-card {
+      transition: transform 0.5s ease; /* Adiciona uma transição suave para a transformação */
+    }
+    
+    /* Estilo para os cards quando virados */
+    .clickable-card.flipped {
+      transform: rotateY(180deg);
+    }
+    
+    
+    
+   
+    .card-front {
+      position: relative;
+    }
+    
+  
+    .hidden {
+      display: none;
+    }
+  
+
+  
+  .clickable-card {
+    transition: transform 0.5s ease; /* Adiciona uma transição suave para a transformação */
+  }
+  
+  /* Estilo para os cards quando virados */
+  .clickable-card.flipped {
+    transform: rotateY(180deg);
+  }
+  
+  
+  .card-back {
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    transform: scaleX(-1);
+    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
+    height: 325px; /* Define uma altura fixa para exibir a barra de rolagem */
+    max-height: 100%;
+
+  }
+
+  
+  .card-back h2,
+  .card-back p {
+  color:white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
 }
 
-.content p {
-  font-size: 20px; 
-  color: bisque;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
-}
+  .card-front {
+    position: relative;
+  }
+  /*titulo*/
+  
+  
+  .titulo{
+    color: #FFFFFF;
+    margin-top: 100px;
+   align-items: center;
+   display: flex;
+   margin-left: 600px;
+   text-decoration: none;
+   font-size: 30px;   
+  }
+
+ 
+  /*foother*/
+  .display {
+    position: absolute;
+    width: 100%;
+    height: 259.99px;
+    background: #0E0D0D;
+    mix-blend-mode: saturation;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centralizar horizontalmente */
+    z-index: 1; 
+  }
+  
+  .displaytext {
+    position: relative;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  
+  .displaytext h2 {
+    margin-bottom: 10px; /* Ajuste a margem inferior conforme necessário */
+  }
+  
+  .displaytext h3 {
+    margin-bottom: 5px; /* Ajuste a margem inferior conforme necessário */
+  }
+  
+
+  
+
+  
+  
