--- a/src/style.css
+++ b/src/style.css
@@ -270,6 +270,9 @@ input {
   width: 50%;
   height: 100%;
 }
+.space{
+  position: relative;
+}
 
 .text {
   width: 40vw;
@@ -281,141 +284,256 @@ input {
   }
 }
 
-/*@media screen and (max-width: 1310px) {
-  .text h1 {
-    font-size: 5vh;
+@media screen and (max-width: 1024px) {
+  body {
+    overflow: hidden;
   }
-  .text p {
-    font-size: 2.5vh;
+  .menu {
+    width: 55px;
+    border-radius: 50px;
+    display: flex;
+    padding: 15px;
   }
-}*/
-@media screen and (max-width: 1030px) {
+  
   .img{
-    height: 80%;
+    width: 150px;
+    height: 100%;
+
+  }
+  
+  main{
+    height: 100%; 
   }
 
-  .text {
-    width: 40vw;
+  .card-container{
+    display: block;
+    margin: 30%;
+  }
+
+  .card-back {
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    transform: scaleX(-1);
+    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
+    height: 500px; /* Define uma altura fixa para exibir a barra de rolagem */
+    max-height: 100%;
+    font: size 30px; ;
+  }
+  .card {
+    width: 300px;
+    cursor: pointer;
+    border-radius: 25px;
+    padding: 5px;
+    height: 545px;
+    justify-content: center;
+    border: 1px solid gray;
+    padding: 10px;
+    margin: 20px;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+  }
+
+  .titulo{
+    margin: 100px;
+  }
+
+  p{
+    font-size: 30px;
   }
 }
 
 @media screen and (max-width: 860px) {
+  body {
+    overflow: hidden;
+  }
+  .menu {
+    width: 55px;
+    border-radius: 50px;
+    display: flex;
+    padding: 15px;
+  }
+  
   .img{
-    height: 70%;
+    width: 150px;
+    height: 100%;
+
+  }
+  
+  main{
+    height: 100%; 
   }
 
-  .text h1 {
-    font-size: 4vh;
+  .card-container{
+    display: block;
+    margin: 30%;
   }
 
-  .text p {
-    font-size: 2vh;
+  .card-back {
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    transform: scaleX(-1);
+    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
+    height: 500px; /* Define uma altura fixa para exibir a barra de rolagem */
+    max-height: 100%;
+    font: size 30px; ;
   }
+  .card {
+    width: 300px;
+    cursor: pointer;
+    border-radius: 25px;
+    padding: 5px;
+    height: 545px;
+    justify-content: center;
+    border: 1px solid gray;
+    padding: 10px;
+    margin: 20px;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+  }
+  
+  .titulo{
+    margin: 250px;
+  }
+
+  p{
+    font-size: 30px;
+  }
+  
 }
 
 @media screen and (max-width: 680px) {
-  .img{
-    height: 60%;
+  body {
+    overflow: hidden;
   }
-
-  .text h1 {
-    font-size: 4vh;
+  .menu {
+    width: 55px;
+    border-radius: 50px;
+    display: flex;
+    padding: 15px;
   }
   
-  .text p {
-    font-size: 2vh;
-  }
-}
-
-@media screen and (max-width: 580px) {
-  body{
-    height: 100%;
-  }
-
-  main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 150%;
-  }
-  
-  .content{
-    flex-direction: column-reverse;
-    /*justify-content: center;*/
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-
-  .text{
-    width: 80vw;
-    height: 35%;
-  }
-
-  .img{
-    height: 40%;
-  }
-
-  #pesquisa{
-    width: 50vw;
-    left: 6%;
-  }
-
-  .menu{
-    width: 50px;
-    top: 0;
-    right: 6%;
-    margin-top: 0;
-  }
-  
-  .filtro01{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1%;
-    background-color: black;
-  }
-
-  .filtro01 ul{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    list-style: none;
-    margin-top: 0;
-  }
-
-  .filtro01 li{
-    width: 100%;
-  } 
-
-  .filtro01 a{
-    justify-self: center;
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 480px) {
   .img{
     display: none;
   }
   
   main{
-    height: 100%;
+    height: 100%; 
   }
 
   .card-container{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: block;
+    margin: 30%;
   }
 
   .card-front img{
-    width: 200px;
+    width: 150px;
+  }
+  .card-back {
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    transform: scaleX(-1);
+    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
+    height: 200px; /* Define uma altura fixa para exibir a barra de rolagem */
+    max-height: 100%;
+  }
+  .card {
+    width: 150px;
+    cursor: pointer;
+    border-radius: 25px;
+    padding: 5px;
+    height: 328px;
+    justify-content: center;
+    border: 1px solid gray;
+    padding: 10px;
+    margin: 20px;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+  }
+ 
+  .titulo{
+    margin: 100px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  
+  body {
+    overflow: hidden;
+  }
+  .menu {
+    width: 55px;
+    border-radius: 50px;
+    display: flex;
+    padding: 15px;
+  }
+  
+  .img{
+    display: none;
+  }
+  
+  main{
+    height: 100%; 
   }
 
+  .card-container{
+    display: block;
+    margin: 30%;
+  }
+
+  .card-front img{
+    width: 150px;
+  }
+  .card-back {
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    transform: scaleX(-1);
+    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
+    height: 200px; /* Define uma altura fixa para exibir a barra de rolagem */
+    max-height: 100%;
+  }
+  .card {
+    width: 150px;
+    cursor: pointer;
+    border-radius: 25px;
+    padding: 5px;
+    height: 328px;
+    justify-content: center;
+    border: 1px solid gray;
+    padding: 10px;
+    margin: 20px;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .titulo{
+    margin: 100px;
+  }
 }
 
 footer{
